Solved Overflow Issue

--- a/client/src/components/TeamPage/CardTest.css
+++ b/client/src/components/TeamPage/CardTest.css
@@ -34,7 +34,7 @@ body {
   }
   .box {
     padding-top: 100px;
-    width: 100%;
+    width: 94%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 15px;
